读取测试，及bug修改